--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,7 +1,7 @@
 - name: test
   on: push
   jobs:
-    test:
+    lint:
       runs-on: ubuntu-latest
       steps:
         - name: Get code
@@ -10,8 +10,24 @@
           run: npm ci
         - name: Lint
           run: npm run lint
+    test:
+      needs: lint
+      runs-on: ubuntu-latest
+      steps:
+        - name: Get code
+          uses: actions/checkout@v3
+        - name: Install Dependencies
+          run: npm ci
         - name: Test code
           run: ntp run test
+    deploy:
+      needs: test
+      runs-on: ubuntu-latest
+      steps:
+        - name: Get code
+          uses: actions/checkout@v3
+        - name: Install Dependencies
+          run: npm ci
         - name: Build code
           run: npm run build
         - name: Deploy code
